# MrsFlow

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  KNOWN_BUGS.md  NEXT_STEPS.md  README.md
Oracle/: Oracle.m  Oracle.m.local  Oracle.xlsx  QueryOracle.ps1  capture_mrsflow.ps1  diff.ps1  now.m  run_one.ps1
Oracle/cases/: q1.m  q10.m  q10.mrsflow.out  q100.excel.out  q100.m  q1000.excel.out  q1000.m  q1001.excel.out  q1001.m  q1002.m  q1002.mrsflow.out  q1003.m  q1004.excel.out  q1004.m  q1005.m  q1005.mrsflow.out  q1006.m  q1006.mrsflow.out  q1007.excel.out  q1007.m  q1008.m  q1008.mrsflow.out  q1009.m  q1009.mrsflow.out  q101.m  q101.mrsflow.out  q1010.m  q1011.m  q1011.mrsflow.out  q1012.excel.out  q1012.m  q1013.m  q1013.mrsflow.out  q1014.m  q1014.mrsflow.out  q1015.m  q1015.mrsflow.out  q1016.m  q1016.mrsflow.out  q1017.m  (+2646 more)
Oracle/coverage/: COVERAGE.md  Function_Families.md  case_names.tsv  cases_status.tsv  coverage.m  extract_cases.ps1  families.tsv  gen_status.ps1  render.ps1
Oracle/coverage/pngtest/: plan.md  renderer.md
docs/: CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  COVERAGE.md
examples/JBP/: Analysis (2).pq  Analysis incl Rebate.pq  Analysis.pq  CUSTOMER.pq  Customer Rebate.pq  GP PowerBI.pq  LastRefreshed.pq  PRODUCT.pq  PowerBI tab.pq  Range.pq  Retro Costs.pq  Revenue PowerBI.pq  Trigger Points 2023.pq  Trigger Points 2024.pq  Trigger Points 2025.pq  Trigger Points WIth Profit 2023.pq  manifest.json
examples/category/: 2020 Budget.pq  Analysis.pq  Calendar.pq  Customer.pq  Geographic Table.pq  Ingredients Table.pq  Main Product Category.pq  OrderI Table.pq  Product Table.pq  Range Table.pq  Sub Product Category.pq  manifest.json
examples/cots/: Analysis.pq  CUSTOMER.pq  Country.pq  Customer Rebate.pq  Growth Rebates NISA.pq  ORDERH.pq  ORDERI.pq  PRICES.pq  PRODUCT.pq  PowerBI tab.pq  Range.pq  Retro Costs.pq  Suma CF Cost Budget.pq  Users.pq  manifest.json
examples/nisa/: Account.pq  AccountsReceivable_CustomerP.pq  Analysis.pq  COSTS.pq  CUSTOMER.pq  Category SQL.pq  Country.pq  Customer Rebate.pq  GP PowerBI.pq  ORDERH.pq  ORDERI.pq  PowerBI tab.pq  Product Table.pq  Range.pq  Revenue PowerBI.pq  manifest.json
examples/powerqueries/: CleanOrderFormDescription.m  DBQueryFromSQLFile.m  FetchWebJsonTable.m  FilterFiles.m  FreshdeskTickets.m  MIS_Sheet1.m  Nutri-Grade.m  OrderFormCells.m  PaperSharepoint.m  Reforecast2024June.m  RocsPrices.m  SelectColumns.m  SharePointOrderForms.m  addColumns.m  evalFile.m  evalUrl.m  listSharepointFolder.m  paper.m  walkDir.m
examples/xmas/: 2024 Sales by IBM New.pq  24 vs 25 YOY Sales by Day New.pq  Last Refresh.pq  SQL ORDERH QUOTEH.pq  SQL ORDERI QUOTEI.pq  Xmas 2024 Sales By Customer.pq  YOY Previous Xmas Sales By Day.pq  manifest.json
mrsflow/: 01-overview.md  02-architecture.md  03-scope-v1.md  04-test-harness.md  05-open-questions.md  06-resources.md  07-evaluator-design.md  08-prolog-differential.md  09-lazy-tables.md  10-plan-ir.md  CONTENTS.md
mrsflow-cli/: Cargo.toml  README.md
mrsflow-cli/examples/: em_smoke.rs
mrsflow-cli/src/: lib.rs  main.rs
mrsflow-cli/src/exportmaster/: DBISAM-PROTOCOL.md  blob.rs  client.rs  crypto.rs  cursor.rs  cursor_info.rs  framing.rs  mod.rs  msg.rs  response.rs  row.rs  schema.rs  wire.rs
mrsflow-cli/tests/: multi_query.rs  parquet_pushdown.rs  parquet_roundtrip.rs  png_decoder.rs  sql_x3.rs
mrsflow-core/: Cargo.toml
mrsflow-core/examples/: ast_dump.rs  bulk_parse.rs  gen_unicode_tables.rs  lex_dump.rs  value_dump.rs
mrsflow-core/src/: lib.rs
mrsflow-core/src/eval/: env.rs  iohost.rs  mod.rs  sexpr.rs  stdlib.rs  summary.rs  value.rs
mrsflow-core/src/eval/stdlib/: binary.rs  binary_format.rs  combiner.rs  common.rs  comparer.rs  csv.rs  date.rs  datetime.rs  datetimezone.rs  diagnostics.rs  duration.rs  error_ops.rs  excel.rs  exportmaster.rs  expression.rs  file.rs  folder.rs  function_ops.rs  geo.rs  html.rs  json.rs  lines.rs  list.rs  logical.rs  mod.rs  mysql.rs  number.rs  odbc.rs  parquet.rs  postgres.rs  record.rs  replacer.rs  row_expression.rs  splitter.rs  sql.rs  table.rs  text.rs  time.rs  type_ops.rs  uri.rs  (+4 more)
mrsflow-core/src/lexer/: mod.rs  token.rs
mrsflow-core/src/parser/: ast.rs  mod.rs
mrsflow-core/src/plan/: differential.rs  fold.rs  ir.rs  lower.rs  mod.rs  optimize.rs  schema.rs  sexpr.rs
mrsflow-core/tests/: differential.rs
mrsflow-wasm/: Cargo.toml
mrsflow-wasm/demo/: index.html
mrsflow-wasm/src/: lib.rs
mrsflow/notes/: row-predicate-access.md
mrsflow/stdlib-reference/: Access.json  AccessControlEntry.json  Action.json  ActiveDirectory.json  AdoDotNet.json  AdobeAnalytics.json  AnalysisServices.json  AzureStorage.json  Binary.json  BinaryFormat.json  Byte.json  Cdm.json  Character.json  Combiner.json  Comparer.json  Csv.json  Cube.json  Currency.json  DB2.json  Date.json  DateTime.json  DateTimeZone.json  Decimal.json  DeltaLake.json  Diagnostics.json  DirectQueryCapabilities.json  Double.json  Duration.json  Embedded.json  Error.json  Essbase.json  Excel.json  Exchange.json  Expression.json  FabricAI.json  File.json  Folder.json  Function.json  Geography.json  GeographyPoint.json  (+57 more)
tools/: extract_ms_docs.py  not_yet_supported.md  stdlib_coverage.py
tools/explain/: README.md  cgi.pl  error_rules.pl  explain.pl  explain.sh  pump_corpus.sh  run_tests.sh
tools/explain/deploy/: deploy.sh  explain-m.cgi  explain-m.conf  index.html  install.sh
tools/explain/test_cases/: data_format_error.err  data_format_error.m  field_not_found.err  field_not_found.m  if_without_else.m  if_without_then.m  list_index_out_of_range.err  list_index_out_of_range.m  name_not_recognised.err  operator_type_mismatch.err  operator_type_mismatch.m  semicolon_in_record.m  trailing_comma_in_let.m  trailing_comma_in_list.m  trailing_comma_in_record.m  wrong_arg_count.err  wrong_arg_count.m
tools/grammar-fuzz/: README.md  cases.txt  cases_eval.txt  cases_parser.txt  diff.sh  diff_eval.sh  diff_parser.sh  evaluator.pl  lex_cli.pl  lexical.pl  syntactic.pl  unicode_tables.pl
tools/png-decoder/m/: Decode.m  Render.m  (+1 more)
