[package]
name = "mrsflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line shell for mrsflow — Parquet IO via IoHost, M source as input"

[lints]
workspace = true

[features]
default = []
# Pulls in the `odbc-api` crate. Requires libodbc / unixODBC (`libodbc-dev`
# on Debian) at build and runtime. Off by default so the workspace builds
# cleanly without an ODBC driver manager present.
odbc = ["dep:odbc-api"]
# Pulls in the `mysql` crate for MySQL.Database. Pure-Rust TLS via rustls,
# no system OpenSSL required. Off by default so the workspace stays light
# for users who don't query MySQL.
mysql = ["dep:mysql"]
# Pulls in tokio-postgres + tokio-postgres-rustls for PostgreSQL.Database.
# Pure-Rust TLS via rustls. Off by default to keep the dep graph light.
postgresql = ["dep:tokio-postgres", "dep:tokio-postgres-rustls", "dep:tokio", "dep:rustls", "dep:webpki-roots", "dep:serde_json", "dep:uuid", "dep:rust_decimal"]

[dependencies]
mrsflow-core = { path = "../mrsflow-core" }
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
# `chrono` is non-optional (File.Modified needs it for SystemTime → DateTime
# conversion, ODBC path uses it for date/timestamp parsing). The `clock`
# feature comes from File.Modified's need to read filesystem mtimes.
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
calamine = { version = "0.35", default-features = false, features = ["chrono"] }
walkdir = "2"
# `bytes::Bytes` wraps the parquet file contents handed to
# `Table::lazy_parquet` — the core decides when to actually decode.
bytes = "1"
# rustls-tls so we don't need OpenSSL on the host. `blocking` to match
# the synchronous IoHost call path (no tokio runtime to bootstrap).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
odbc-api = { version = "13", optional = true }
# Native MySQL protocol client. `default-features = false` strips the bundled
# OpenSSL backend; `minimal-rust` selects the minimum sync feature set;
# `rustls-tls-ring` gives us pure-Rust TLS (rustls + ring crypto provider)
# matching reqwest's TLS choice above.
mysql = { version = "26", default-features = false, features = ["minimal-rust", "rustls-tls-ring"], optional = true }
# Async PostgreSQL client; bridged to sync via a single-threaded tokio
# runtime in CliIoHost. tokio-postgres-rustls plugs in pure-Rust TLS;
# webpki-roots gives us a Mozilla root CA bundle so we don't need to
# read /etc/ssl/certs at runtime.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"], optional = true }
# serde_json: shared with mrsflow-core; pulled in directly so the
# postgresql codepath can parse JSONB into M records.
serde_json = { version = "1", default-features = false, features = ["std", "preserve_order"], optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "macros"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }
uuid = { version = "1", optional = true }
# rust_decimal: FromSql for Postgres NUMERIC → 128-bit mantissa + scale.
# Together with mrsflow's Value::Decimal this gives a lossless round-trip
# for the common NUMERIC(38,s) range. `db-tokio-postgres` provides the
# FromSql/ToSql impls.
rust_decimal = { version = "1", default-features = false, features = ["std", "db-tokio-postgres"], optional = true }

[[bin]]
name = "mrsflow"
path = "src/main.rs"

[dev-dependencies]
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
